# DJI-Challenge-2016

./: README.md
DJI_BACKUP_17.3.17/: GuidanceNodeTest.cpp  GuidanceNodeTest1.cpp  bookmarks.html  client(out).cpp
DJI_BACKUP_17.3.17/Guidance-SDK-ROS/: CMakeLists.txt
DJI_BACKUP_17.3.17/Guidance-SDK-ROS-007/: .project
DJI_BACKUP_17.3.17/Guidance-SDK-ROS-007/src/: GuidanceNode-0420.cpp  GuidanceNode-0420.cpp~  GuidanceNode.cpp  GuidanceNode.cpp~  GuidanceNodeTest.cpp  GuidanceNodeTest.cpp~
DJI_BACKUP_17.3.17/Guidance-SDK-ROS/src/: GuidanceNode (复件).cpp  GuidanceNode.cpp~  (+4 more)
DJI_BACKUP_17.3.17/Guidance-SDK-ROS0427/: CMakeLists.txt
DJI_BACKUP_17.3.17/Guidance-SDK-Rotation0419/: CMakeLists.txt~  package.xml
DJI_BACKUP_17.3.17/Guidance-SDK-Rotation0419/src/: GuidanceNode.cpp  GuidanceNode.cpp~  GuidanceNodeTest.cpp  GuidanceNodeTest.cpp~  Quatanion2Matrix.cpp
DJI_BACKUP_17.3.17/Guidance-SDK-master/: README.md
DJI_BACKUP_17.3.17/catkin_ws/: .cproject  ide.sh  log.txt
DJI_BACKUP_17.3.17/catkin_ws/src/Onboard-SDK-6.2  obstacle/dji_sdk_manifold_read_cam_apriltag jiaozheng/: CMakeCache.txt  CMakeLists.txt  package.xml
DJI_BACKUP_17.3.17/catkin_ws/src/Onboard-SDK-6.2  obstacle/dji_sdk_manifold_read_cam_apriltag jiaozheng/AprilTags/: Edge.h  FloatImage.h  GLine2D.h  Gaussian.h  GrayModel.h  Gridder.h  Homography33.h  MathUtil.h  Quad.h  Segment.h  Tag16h5.h  Tag16h5_other.h  Tag25h7.h  Tag25h9.h  Tag36h11.h  Tag36h11_other.h  Tag36h9.h  TagDetection.h  TagDetector.h  TagFamily.h  UnionFindSimple.h  XYWeight.h  pch.h
DJI_BACKUP_17.3.17/catkin_ws/src/Onboard-SDK-6.2  obstacle/dji_sdk_manifold_read_cam_apriltag jiaozheng/calibration/: Distortion.xml  Intrinsics.xml  cam_rotation_all.xml  cam_translation_vector_all.xml
DJI_BACKUP_17.3.17/catkin_ws/src/Onboard-SDK-6.2  obstacle/dji_sdk_manifold_read_cam_apriltag jiaozheng/example/: apriltags_demo.cpp
DJI_BACKUP_17.3.17/catkin_ws/src/Onboard-SDK-6.2  obstacle/dji_sdk_manifold_read_cam_apriltag jiaozheng/include/: djicam.h
DJI_BACKUP_17.3.17/catkin_ws/src/Onboard-SDK-6.2  obstacle/dji_sdk_manifold_read_cam_apriltag jiaozheng/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
DJI_BACKUP_17.3.17/catkin_ws/src/Onboard-SDK-6.2  obstacle/dji_sdk_manifold_read_cam_apriltag jiaozheng/pod-build/example/: Makefile  cmake_install.cmake
DJI_BACKUP_17.3.17/catkin_ws/src/Onboard-SDK-6.2  obstacle/dji_sdk_manifold_read_cam_apriltag jiaozheng/pod-build/lib/pkgconfig/: apriltags.pc
DJI_BACKUP_17.3.17/catkin_ws/src/Onboard-SDK-6.2  obstacle/dji_sdk_manifold_read_cam_apriltag jiaozheng/src/: nv_cam   3.cpp  nv_cam 1.cpp  nv_cam.cpp  nv_cam.cpp~
(+345 files in other folders)
